[tool.poetry]
name = "panapi"
version = "0.0.1"
description = "Lightweight Python SDK for Palo Alto Networks Cloud Management API"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>", "Robert Hagen <stealthllama>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
cryptography = "37.0.4"
idna = "3.3"
oauthlib = "3.2.0"
pycparser = "2.21"
PyJWT = "2.4.0"
PyYAML = "6.0"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
urllib3 = "1.26.12"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
invoke = "^2.0.0"
flake8 = "^6.0.0"
ipython = "^8.9.0"
bandit = "^1.7.4"
pymarkdownlnt = "^0.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
